--- a/devices/sensors.yaml
+++ b/devices/sensors.yaml
@@ -59,30 +59,30 @@
   name: pizw speedtest ping
   state_topic: "system/pizw/speedtest/ping"
   unit_of_measurement: "ms"
-# - platform: mitemp_bt
-#   mac: !secret mac_temp_mi_dormitori
-#   monitored_conditions:
-#     - temperature
-#     - humidity
-#   scan_interval: 120
-#   retries: 1
-#   timeout: 10
-#   median: 1
-#   name: Dormitori
-# - platform: mitemp_bt
-#   mac: !secret mac_temp_mi_menjador
-#   monitored_conditions:
-#     - temperature
-#     - humidity
-#   scan_interval: 120
-#   retries: 1
-#   timeout: 10
-#   median: 1
-#   name: Menjador
-# - platform: beewi_smartclim
-#   mac: !secret mac_temp_beewi_exterior
-#   name: Exterior
-#   scan_interval: 60
+- platform: mitemp_bt
+  mac: !secret mac_temp_mi_dormitori
+  monitored_conditions:
+    - temperature
+    - humidity
+  scan_interval: 120
+  retries: 1
+  timeout: 10
+  median: 1
+  name: Dormitori
+- platform: mitemp_bt
+  mac: !secret mac_temp_mi_menjador
+  monitored_conditions:
+    - temperature
+    - humidity
+  scan_interval: 120
+  retries: 1
+  timeout: 10
+  median: 1
+  name: Menjador
+- platform: beewi_smartclim
+  mac: !secret mac_temp_beewi_exterior
+  name: Exterior
+  scan_interval: 60
 # - platform: github
 #   access_token: !secret github_access_token
 #   repositories:
@@ -185,7 +185,6 @@
       friendly_name: "Aleix velocity"
       unit_of_measurement: 'km/h'
       value_template: "{{ state_attr('device_tracker.aleix_s10e', 'velocity') }}"
-
 
 ###############
 #  Templates  #
