--- a/lovelace/decluttering_templates/nest_buttons/nest_button_light.yaml
+++ b/lovelace/decluttering_templates/nest_buttons/nest_button_light.yaml
@@ -9,7 +9,10 @@ nest_button_light:
       - show_last_changed: false
       - entity: "[[entity]]"
       - icon: "[[icon]]"
+      - tap_action: "[[tap_action]]"
       - background_on: "#fbd229"
       - state_enabled: "[[state_enabled]]"
   default:
     - state_enabled: "on"
+    - tap_action:
+        action: toggle
