--- a/lovelace/views/00_home/menjador.yaml
+++ b/lovelace/views/00_home/menjador.yaml
@@ -55,6 +55,8 @@ cards:
               - entity: climate.menjador
               - icon: "mdi:home-thermometer-outline"
               - state_enabled: "heat"
+              - tap_action:
+                  action: more-info
           - template: nest_button_binary_sensor
             type: "custom:decluttering-card"
             variables:
@@ -73,12 +75,19 @@ cards:
               - name: Echo Dot
               - entity: media_player.echo_dot_de_immaleix
               - icon: "mdi:amazon-alexa"
+          # - template: nest_button_media_player
+          #   type: "custom:decluttering-card"
+          #   variables:
+          #     - name: Kodi
+          #     - entity: media_player.kodi
+          #     - icon: "mdi:kodi"
           - template: nest_button_media_player
             type: "custom:decluttering-card"
             variables:
-              - name: Kodi
-              - entity: media_player.kodi
-              - icon: "mdi:kodi"
+              - name: Xbox One
+              - entity: media_player.xbox_one_menjador
+              - icon: "mdi:microsoft-xbox"
+              - state_enabled: "on"
           - template: nest_button_light
             type: "custom:decluttering-card"
             variables:
