--- a/configuration.yaml
+++ b/configuration.yaml
@@ -24,7 +24,9 @@ frontend:
 http:
   base_url: aleix.casa
   use_x_forwarded_for: true
-  trusted_proxies: 127.0.0.1
+  trusted_proxies: 
+    - 127.0.0.1
+    - 10.0.0.0/8
   # ip_ban_enabled: true
   # login_attempts_threshold: 3
 
