--- a/automations/sensors/someone_leaves_home.yaml
+++ b/automations/sensors/someone_leaves_home.yaml
@@ -1,5 +1,5 @@
 alias: Casa - Algú marxa
-initial_state: false
+initial_state: true
 mode: single
 trigger:
   - entity_id: binary_sensor.door_main_entrance 
@@ -12,7 +12,7 @@ condition:
   state: 'on'
 action:
   # Send notification
-  - service: notify.gotify_high_priority
+  - service: notify.notify
     data: 
       title: "Casa"
       message: "Algú marxa de casa."
