--- a/devices/input_select.yaml
+++ b/devices/input_select.yaml
@@ -21,3 +21,19 @@ zigbee2mqtt_log_level:
     - error
   initial: info
   icon: mdi:format-list-bulleted
+
+
+
+
+# escena_Matinada:
+#   name: Escena Matinada
+# escena_Matí:
+#   name: Escena Matí
+# escena_Migdia:
+#   name: Escena Migdia
+# escena_Tarda:
+#   name: Escena Tarda
+# escena_Vespre:
+#   name: Escena Vespre
+# escena_Nit:
+#   name: Escena Nit
