--- a/scripts/tv/antena3.yaml
+++ b/scripts/tv/antena3.yaml
@@ -1,9 +1,7 @@
 'tv_antena3':
-  alias: TV - Antena3
+  alias: Antena3
   sequence:
-  - service: scene.turn_on
-    data:
-      entity_id: scene.cena
+  - service: script.menjador_dynamic_scene
   - service: media_player.turn_on
     data: 
       entity_id: media_player.tele
