--- a/scripts/tv/xbox.yaml
+++ b/scripts/tv/xbox.yaml
@@ -1,6 +1,7 @@
 'tv_turn_on_xbox':
   alias: Vamos a jugar
   sequence:
+  - service: script.menjador_dynamic_scene
   - service: media_player.turn_on
     data: 
       entity_id: media_player.xbox_one_menjador
